--- a/i18n/fr.yaml
+++ b/i18n/fr.yaml
@@ -14,6 +14,8 @@ key-contacts:
   other: "Contacts"
 lang-switch-label:
   other: English
+meet-the-full-team:
+  other: "Rencontrer l'équipe"
 our-team:
   other: "Notre équipe"
 pause:
