--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -14,6 +14,8 @@ key-contacts:
   other: "Key Contacts"
 lang-switch-label:
   other: "Français"
+meet-the-full-team: 
+  other: "Meet the Full Team"
 our-team:
   other: "Our team"
 pause:
