Job posting page updates: Making them manageable in Netlify CMS; switching posts to markdown

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -22,6 +22,8 @@ goc:
   other: "Government of Canada"
 goc-symbol:
   other: "Symbol of the Government of Canada"
+hiring:
+  other: "We're hiring"
 homepage-tag-line:
   other: "People expect government services to be simple and easy to use."
 key-contacts:
